# blog.yuo.be

./: .eslintignore  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .subset-chars  LICENCE  README.md  astro.config.mjs  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml
public/: _redirects  robots.txt  rss.css  rss.xsl
scripts/: download_fonts.py  subset_fonts.py
src/: content.config.ts  globals.d.ts
src/components/: Aside.astro  CaptionedCode.astro  CaptionedImage.astro  Comments.tsx  ImageGrid.astro  Pagination.astro  PostImage.astro  RawCaptionedImage.astro  SocialCard.tsx  SocialCardImageOverlay.tsx  index.ts
src/components/client/: Comments.tsx  ImageTabs.pcss  ImageTabs.tsx  ShareMenu.pcss  ShareMenu.tsx  ThemeSelector.pcss  ThemeSelector.tsx  index.ts
src/content/: config.ts
src/layouts/: Layout.astro  Layout.pcss  font-awesome.scss
src/lib/: getCommentCounts.ts  getPosts.ts  imageService.ts  index.ts
src/lib/server/: getPosts.ts  getTags.ts  index.ts
src/pages/: 404.astro  [...page].astro  [...slug].astro  rss.xml.ts
src/pages/[...slug]/: _comentario.pcss  card.[ext].ts  index.astro
src/pages/tag/[...tag]/: [...page].astro
src/posts/2006/new-notebook-part-2/: post.md
test/e2e/: accessibility.spec.ts  constants.ts  visual.spec.ts
test/e2e/pages/: mode-toggle.spec.ts  post.spec.ts  root.spec.ts  share-menu.spec.ts  tag-index.spec.ts  theme-selector.spec.ts
(+341 files in other folders)
